lambda/lambda.output

state 0
	$accept: .top $end 

	FUN  shift 4
	LPAREN  shift 8
	INT  shift 6
	VAR  shift 7
	.  error

	lambda  goto 2
	litteral  goto 5
	application  goto 3
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  lambda.    (1)

	.  reduce 1 (src line 32)


state 3
	lambda:  application.    (2)
	application:  application.litteral 

	LPAREN  shift 8
	INT  shift 6
	VAR  shift 7
	.  reduce 2 (src line 34)

	litteral  goto 9

state 4
	lambda:  FUN.VAR fundefinition 

	VAR  shift 10
	.  error


state 5
	application:  litteral.    (6)

	.  reduce 6 (src line 42)


state 6
	litteral:  INT.    (8)

	.  reduce 8 (src line 46)


state 7
	litteral:  VAR.    (9)

	.  reduce 9 (src line 48)


state 8
	litteral:  LPAREN.lambda RPAREN 

	FUN  shift 4
	LPAREN  shift 8
	INT  shift 6
	VAR  shift 7
	.  error

	lambda  goto 11
	litteral  goto 5
	application  goto 3

state 9
	application:  application litteral.    (7)

	.  reduce 7 (src line 44)


state 10
	lambda:  FUN VAR.fundefinition 

	ARROW  shift 13
	VAR  shift 14
	.  error

	fundefinition  goto 12

state 11
	litteral:  LPAREN lambda.RPAREN 

	RPAREN  shift 15
	.  error


state 12
	lambda:  FUN VAR fundefinition.    (3)

	.  reduce 3 (src line 36)


state 13
	fundefinition:  ARROW.lambda 

	FUN  shift 4
	LPAREN  shift 8
	INT  shift 6
	VAR  shift 7
	.  error

	lambda  goto 16
	litteral  goto 5
	application  goto 3

state 14
	fundefinition:  VAR.fundefinition 

	ARROW  shift 13
	VAR  shift 14
	.  error

	fundefinition  goto 17

state 15
	litteral:  LPAREN lambda RPAREN.    (10)

	.  reduce 10 (src line 49)


state 16
	fundefinition:  ARROW lambda.    (4)

	.  reduce 4 (src line 38)


state 17
	fundefinition:  VAR fundefinition.    (5)

	.  reduce 5 (src line 40)


9 terminals, 6 nonterminals
11 grammar rules, 18/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 12/120000
15 extra closures
21 shift entries, 1 exceptions
9 goto entries
4 entries saved by goto default
Optimizer space used: output 20/120000
20 table entries, 0 zero
maximum spread: 9, maximum offset: 14
